--- a/config/default/manager_image_patch.yaml
+++ b/config/default/manager_image_patch.yaml
@@ -8,8 +8,14 @@ spec:
     spec:
       containers:
       # Change the value of image field below to your controller image URL
-      - image: gcr.io/kubeflow-193622/airflow-operator:db92567
+      - image: quay.io/vpavlin/airflow-operator:openshift
         name: manager
+        command: []
+        resources:
+          requests:
+            memory: 200Mi
+          limits:
+            memory: 300Mi
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
